<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fond">

    <ScrollView
        android:id="@+id/scrollPPal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="30">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View style="@style/ligne"/>

            <TextView
                style="@style/textAccentue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titre"
                android:textSize="@dimen/taille_titre" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_capy"
                android:src="@drawable/capy"/>

            <View style="@style/ligne"/>

            <TextView
                style="@style/textAccentue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sondage"
                android:textStyle="bold"
                android:textSize="@dimen/taille_texte"/>

            <EditText
                style="@style/textNormal"
                android:id="@+id/nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sondage_nom"
                android:inputType="textCapWords"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    style="@style/textNormal"
                    android:id="@+id/coursAdore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/j_adore_le_cours"
                    android:onClick="changerMessageAdore"/>

                <RadioButton
                    style="@style/textNormal"
                    android:id="@+id/coursNonAdore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/je_n_adore_pas_le_cours"
                    android:onClick="changerMessageNonAdore"/>
            </RadioGroup>

            <TextView
                style="@style/textNormal"
                android:id="@+id/testAdore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/taille_texte"/>

            <CheckBox
                style="@style/textNormal"
                android:id="@+id/check_verser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_bouton_verser"
                android:onClick="changerVisibiliteBouttonVerser2"/>

            <View style="@style/ligne"/>

            <TextView
                style="@style/textAccentue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/boissons"
                android:textSize="@dimen/taille_texte"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>
                    <Button
                        style="@style/Boutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:text="@string/pepsi"
                        android:id="@+id/but_pepsi"
                        android:onClick="ajouterBoisson"/>

                    <Button
                        style="@style/Boutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:text="@string/orangeade"
                        android:id="@+id/but_orange"
                        android:onClick="ajouterBoisson"/>
                </TableRow>

                <TableRow>
                    <Button
                        style="@style/Boutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:text="@string/racinette"
                        android:id="@+id/but_racine"
                        android:onClick="ajouterBoisson"/>

                    <Button
                        style="@style/Boutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:text="@string/fraise"
                        android:id="@+id/but_fraise"
                        android:onClick="ajouterBoisson"/>
                </TableRow>
            </TableLayout>

            <TextView
                style="@style/textAccentue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saveurs"
                android:textSize="@dimen/taille_texte"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    style="@style/Boutton"
                    android:id="@+id/but_epices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/epices"
                    android:onClick="ajouterSaveur"/>

                <Button
                    style="@style/Boutton"
                    android:id="@+id/but_bacon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/but_epices"
                    android:layout_toEndOf="@id/but_epices"
                    android:text="@string/bacon"
                    android:onClick="ajouterSaveur"/>

                <Button
                    style="@style/Boutton"
                    android:id="@+id/but_gin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/but_bacon"
                    android:layout_toEndOf="@id/but_bacon"
                    android:text="@string/gingembre"
                    android:onClick="ajouterSaveur"/>
            </RelativeLayout>

            <TextView
                style="@style/textAccentue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/actions"
                android:textSize="@dimen/taille_texte"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    style="@style/Boutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nouveau"
                    android:id="@+id/but_nouveau"
                    android:onClick="nouveau"/>

                <Button
                    style="@style/Boutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verser"
                    android:onClick="verser"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        style="@style/Boutton"
        android:id="@+id/boutton_verser_precedent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="70"
        android:text="@string/verser2"
        android:onClick="reverser"/>


</LinearLayout>